[gd_scene load_steps=6 format=3 uid="uid://1fl4npejegn2"]

[ext_resource type="Script" path="res://Scenen/rythm_game.gd" id="1_buiov"]
[ext_resource type="Texture2D" uid="uid://djbqlhevrgdvd" path="res://Resources/Sprite-Signwithflute.png" id="1_imhwk"]
[ext_resource type="PackedScene" uid="uid://dh1ihc81uofnc" path="res://Scenen/Idle_node_1.tscn" id="2_gjpf1"]
[ext_resource type="PackedScene" uid="uid://cuyd1qv0pn26e" path="res://addons/midi/MidiPlayer.tscn" id="5_jd3uc"]
[ext_resource type="PackedScene" uid="uid://bdvkdv77fslji" path="res://addons/midi/ADSR.tscn" id="6_e1a46"]

[node name="Rythm-Game" type="Node2D"]
position = Vector2(1500, 600)
script = ExtResource("1_buiov")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_imhwk")

[node name="IdleNode" parent="." instance=ExtResource("2_gjpf1")]
position = Vector2(-381, -40)

[node name="MidiPlayer" parent="." instance=ExtResource("5_jd3uc")]
file = "res://Resources/Tetris_delay.mid"
playing = true
soundfont = "res://Resources/UprightPianoKW-small-bright-20190703.sf2"

[node name="ADSR" parent="." instance=ExtResource("6_e1a46")]

[node name="Positions" type="Node2D" parent="."]

[node name="Position1" type="Marker2D" parent="Positions"]

[node name="Position2" type="Marker2D" parent="Positions"]

[node name="Position3" type="Marker2D" parent="Positions"]

[node name="Position4" type="Marker2D" parent="Positions"]

[connection signal="midi_event" from="MidiPlayer" to="." method="_on_midi_player_midi_event"]
